# cmsc398z-student-downloads

./: .gitignore  AICSEPAR2026.md  CLAUDE.md  README.md
week1/: README.md
week1/playWordle/: README.md  chat.md
week1/wordSearch/: chat.md  main.py  pyproject.toml  word_grid.py
week1/wordSearch-finished/: README.md  chat.md  input1.txt
week10/: README.md  UNKNOWN_KIND_ANALYSIS.md  issue36-fully-fixed.md
week11/: README.md
week12/: README.md
week13/: GOAL-WEEK1.md  README.md  UNDERSTANDING_CONVERSATIONS.md
week14/: ANALYSIS-2025-12-09.md  BILLS-LEARNINGS-WEEK1.md  DISCUSSION_SUMMARY.md  README.md  RETHINKING_VIRTUAL_ROOMS.md  UPDATING_CONVERSATIONS.md
week2/: README.md
week2/markovText/: .submit  .submitDisplay  .submitIgnore  (+5 more)
week3/: README.md
week4/: README.md
week5/: README.md
week5/extraction/: .submit  .submitIgnore  README.md  Results.md  prompting-python.md  prompting.md  pyproject.toml  setup.md  unparsable.txt  week5-project.md
week6/: README.md
week7/: README.md
week7/databases/: .gitignore  .submit  .submitIgnore  antonov.csv  cmsc_course_embeddings.db  do-embeddings-all  do-embeddings-cmsc  foo  out  pyproject.toml  results-1760717413.csv  schema.sql  schema_diagram.md  schema_diagram_complete.md  semantic-search-and-rag.md  studentWork.md  text-to-sql.md  text_to_sql.py  text_to_sql_cli.py  tools.md  umd-qa.sh  umd-schema.sql
week8/: .gitignore  .submit  .submitIgnore  README.md  congressionalRecord.md  cpython-CLAUDE.md  gettingSetUpInClaude.md  modifyingIdle.md  wordSearch-review.md  wordSearch.md
week9/: README.md
(+46 files in other folders)
